--- a/register.html
+++ b/register.html
@@ -51,7 +51,7 @@
                 <input type="button" value="Simpan">
                 <input type="button" value="Batal">
             </div>
-            <p>Sudah punya akun? <a href="login.html">Login</a></p>
+            <p>Sudah punya akun? <a href="index.html">Login</a></p>
         </form>
     </div>
 </body>
