--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <table class="form-register">
-        <form action="">
+        <form>
             <tr class="title">
                 <td colspan="3"><h1>REGISTER</h1></td>
             </tr>
@@ -63,7 +63,7 @@
                     <button type="submit">Simpan</button>
                     <button type="submit">Batal</button>
                     <div class="login-register">
-                        <p>Sudah punya akun? <a href="login.html">Login</a></p>
+                        <p>Sudah punya akun? <a href="index.html">Login</a></p>
                     </div>
                 </td>
             </tr>
