--- a/register.html
+++ b/register.html
@@ -56,7 +56,7 @@
                 </td>
             </tr>
             <tr>
-                <td colspan="3"><input type="checkbox" required>Saya Menyetujui peraturan yang ada</td>
+                <td colspan="3"><input type="checkbox" required><label>Saya Menyetujui peraturan yang ada</label></td>
             </tr>
             <tr class="last">
                 <td colspan="3">
