--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -83,18 +83,20 @@
   <!-- About -->
   <section class="ni" id="about">
     <div class="about">
-      <h4 class="about-head">About Me</h4>
-      <div class="about-content">
-        <p class="satu">
-          Perkenalkan nama saya <span class="abt-fcs">Tegar Dwi Arbiantoro</span> biasa dipanggil Tegar.
-        </p>
-        <span class="teng">
-          Lahir 05 Maret 2006 di Blitar, Sekarang Menempuh pendidikan di <span class="abt-fcs">SMKN 1 Nglegok</span>
-        </span>
-        <p class="dua">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. In odit exercitationem quo optio eveniet, earum consequatur qui assumenda iusto inventore tempore minus eos. Aliquid adipisci corporis culpa suscipit, ipsam excepturi?
-        </p>
-      </div>
+      <article>
+        <h4 class="about-head">About Me</h4>
+        <div class="about-content">
+          <p class="satu">
+            Perkenalkan nama saya <span class="abt-fcs">Tegar Dwi Arbiantoro</span> biasa dipanggil Tegar.
+          </p>
+          <span class="teng">
+            Lahir 05 Maret 2006 di Blitar, Sekarang Menempuh pendidikan di <span class="abt-fcs">SMKN 1 Nglegok</span>
+          </span>
+          <p class="dua">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. In odit exercitationem quo optio eveniet, earum consequatur qui assumenda iusto inventore tempore minus eos. Aliquid adipisci corporis culpa suscipit, ipsam excepturi?
+          </p>
+        </div>
+      </article>
     </div>
     <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#001866" fill-opacity="1" d="M0,224L30,192C60,160,120,96,180,74.7C240,53,300,75,360,90.7C420,107,480,117,540,144C600,171,660,213,720,240C780,267,840,277,900,245.3C960,213,1020,139,1080,96C1140,53,1200,43,1260,58.7C1320,75,1380,117,1410,138.7L1440,160L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path>
@@ -104,25 +106,27 @@
 
   <!-- Project -->
   <section class="san" id="projects">
-    <article>
-      <h3 class="title">Projects</h3>
-      <div class="pro">
-        <div class="kartu">
-          <div class="img-kartu">
-            <img src="../img/1316658.jpeg" alt="" class="tmb">
+    <div class="projek">
+      <article>
+        <h3 class="san-title">PROJECT</h3>
+        <div class="pro">
+          <div class="kartu">
+            <div class="img-kartu">
+              <img src="../img/simonel.png" alt="" class="tmb">
+            </div>
+              <h4 class="judul-kartu">Website IoT Sistem Monitoring Panel</h4>
+              <p class="text-kartu">Project Website IoT Sistem Monitoring Panel PLTS On Grid System dengan menggunakan PHP MySQL.</p>
+            </div>
+            <div class="kartu">
+            <div class="img-kartu">
+              <img src="../img/1316658.jpeg" alt="" class="tmb">
+            </div>
+            <h4 class="judul-kartu">Website IoT Sistem Monitoring Panel</h4>
+            <p class="text-kartu">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia accusantium impedit magni perspiciatis beatae eveniet.</p>
           </div>
-          <h4 class="judul-kartu">Website IoT Sistem Monitoring Panel</h4>
-          <p class="text-kartu">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia accusantium impedit magni perspiciatis beatae eveniet.</p>
         </div>
-        <div class="kartu">
-          <div class="img-kartu">
-            <img src="../img/1316658.jpeg" alt="" class="tmb">
-          </div>
-          <h4 class="judul-kartu">Website IoT Sistem Monitoring Panel</h4>
-          <p class="text-kartu">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia accusantium impedit magni perspiciatis beatae eveniet.</p>
-        </div>
-      </div>
-    </article>
+      </article>
+    </div>
     <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#E4E5E7" fill-opacity="1" d="M0,128L30,160C60,192,120,256,180,272C240,288,300,256,360,229.3C420,203,480,181,540,181.3C600,181,660,203,720,197.3C780,192,840,160,900,165.3C960,171,1020,213,1080,208C1140,203,1200,149,1260,133.3C1320,117,1380,139,1410,149.3L1440,160L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path>
     </svg> -->
@@ -164,7 +168,7 @@
   <!-- Footer -->
   <footer>
     <div class="footer-copyright">
-      <p class="copyright">Copyright <i>By</i><a href="https://tegardwia.blogspot.com/" class="hlg">Tegar-Dwi-Arbiantoro</a> 2023</p>
+      <p class="copyright">Copyright By<a href="https://tegardwia.blogspot.com/" class="hlg">Tegar-Dwi-Arbiantoro</a> 2023</p>
     </div>
   </footer>
   <!-- Akhir Footer -->
