--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <div class="login-container">
         <h2>Login</h2>
         <form>
-            <input type="text" placeholder="Username" required>
-            <input type="password" placeholder="Password" required>
-            <button type="submit">Login</button>
+            <input type="text" name="user" id="user" placeholder="Username" required>
+            <input type="password" name="password" id="password" placeholder="Password" required>
+            <button type="submit" onclick="login();">Login</button>
             <div class="login-register">
                 <p>Belum punya akun?<a href="register.html">Register</a></p>
             </div>
         </form>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
