--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -15,7 +15,10 @@
   <!-- Navbar -->
   <nav>
     <div class="container">
-      <div class="gambar"><a href="../img/Fu Hua.jpg"><img src="../img/Fu Hua.jpg" width="50px" alt=""></a></div>
+      <div class="gambar">
+        <a href="../img/Fu Hua.jpg"><img src="../img/Fu Hua.jpg" width="50px" alt=""></a>
+        <p>Touya<span class="fcs">Dev</span></p>
+      </div>
       <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button> -->
@@ -37,6 +40,18 @@
       </div>
     </div>
   </nav>
+
+  <!-- <nav>
+    <div class="head">
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Project</li>
+        <li>Contact me</li>
+      </ul>
+    </div>
+  </nav> -->
+  <!-- Akhir Navbar -->
 
   <!-- Jumbotron -->
   <section class="ichi">
@@ -75,13 +90,13 @@
         <h4 class="about-head">About Me</h4>
         <div class="about-content">
           <p class="satu">
-            Perkenalkan nama saya <span class="abt-fcs">Tegar Dwi Arbiantoro</span> biasa dipanggil Tegar.
+            Perkenalkan nama saya <span class="abt-fcs">Tegar Dwi Arbiantoro</span> biasa dipanggil <span class="abt-fcs">Tegar.</span>
           </p>
           <span class="teng">
-            Lahir 05 Maret 2006 di Blitar, Sekarang Menempuh pendidikan di <span class="abt-fcs">SMKN 1 Nglegok</span>
+            Lahir 05 Maret 2006 di Blitar, Sekarang Menempuh pendidikan di <span class="abt-fcs">SMKN 1 Nglegok.</span>
           </span>
           <p class="dua">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. In odit exercitationem quo optio eveniet, earum consequatur qui assumenda iusto inventore tempore minus eos. Aliquid adipisci corporis culpa suscipit, ipsam excepturi?
+            Saya terinspirasi oleh <span class="abt-fcs">teknologi</span> dan ingin terlibat di dalamnya, saya juga senang belajar dari <span class="abt-fcs">pengalaman dan kesalahan.</span>
           </p>
         </div>
       </article>
@@ -106,12 +121,12 @@
               <p class="text-kartu">Project Website IoT Sistem Monitoring Panel PLTS On Grid System dengan menggunakan PHP MySQL.</p>
             </div>
             <div class="kartu">
-            <div class="img-kartu">
+            <!-- <div class="img-kartu">
               <img src="../img/1316658.jpeg" alt="" class="tmb">
             </div>
             <h4 class="judul-kartu">Website IoT Sistem Monitoring Panel</h4>
             <p class="text-kartu">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia accusantium impedit magni perspiciatis beatae eveniet.</p>
-          </div>
+          </div> -->
         </div>
       </article>
     </div>
@@ -142,6 +157,7 @@
         </div>
       </article>
     </div>
+    
 
     <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
       <path fill="#FC0CE4" fill-opacity="1" d="M0,128L30,112C60,96,120,64,180,74.7C240,85,300,139,360,170.7C420,203,480,213,540,218.7C600,224,660,224,720,197.3C780,171,840,117,900,133.3C960,149,1020,235,1080,256C1140,277,1200,235,1260,213.3C1320,192,1380,192,1410,192L1440,192L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path>
