--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <div class="login-container">
         <h2>Login</h2>
-        <form>
+        <div class="form">
             <input type="text" name="user" id="user" placeholder="Username" required>
             <input type="password" name="password" id="password" placeholder="Password" required>
             <button type="submit" onclick="login();">Login</button>
             <div class="login-register">
                 <p>Belum punya akun?<a href="register.html">Register</a></p>
             </div>
-        </form>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
