--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -8,6 +8,7 @@
   <title>Tegar Dwi A || About Me</title>
   <link rel="shortcut icon" href="../img/Fu Hua.jpg" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
@@ -56,13 +57,13 @@
   <!-- Jumbotron -->
   <section class="ichi">
     <div class="jumb">
-      <div class="aku">
+      <div class="aku" data-aos="fade-right" data-aos-duration="600">
         <img src="../img/pp.png" alt="">
         <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
           <path fill="#112B7E" d="M56.7,-12.5C66.1,10.5,61.3,44.1,41.7,58.6C22.2,73,-12,68.3,-35.7,50.7C-59.3,33.2,-72.4,2.7,-64.7,-18C-57,-38.7,-28.5,-49.6,-2.4,-48.8C23.6,-48,47.3,-35.5,56.7,-12.5Z" transform="translate(100 100)" />
         </svg>
       </div>
-      <div class="oke">
+      <div class="oke "data-aos="fade-left" data-aos-duration="600">
         <h3 class="jumbotron">
           <span class="fokus">Hi</span> i'm
         </h3>
@@ -174,6 +175,7 @@
       <p class="copyright">Copyright By<a href="https://tegardwia.blogspot.com/" class="hlg">Tegar-Dwi-Arbiantoro</a> 2023</p>
     </div>
   </footer>
+  <a href="#" class="to-top" id="to-top"><i class="fa-solid fa-chevron-up"></i></a>
   <!-- Akhir Footer -->
 
   <!-- JavaScript -->
