--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -53,17 +53,17 @@
       <div class="aku" data-aos="fade-right" data-aos-duration="600">
         <img src="../img/pp.png" alt="">
       </div>
-      <div class="oke" data-aos="fade-left" data-aos-duration="600">
-        <h3 class="jumbotron">
+      <div class="oke">
+        <h3 class="jumbotron" data-aos="fade-left" data-aos-duration="400">
           <span class="fokus">Hi</span> i'm
         </h3>
-        <h1 class="jumbotron">
+        <h1 class="jumbotron" data-aos="fade-left" data-aos-duration="600">
           <span class="fokus">Tegar Dwi</span> Arbiantoro
         </h1>
-        <p class="text">
+        <p class="text" data-aos="fade-left" data-aos-duration="800">
           Siswa kelas XII jurusan Teknik Komputer Jaringan <span class="jumbotron">SMKN 1 NGLEGOK</span> 
         </p>
-        <h4 class="read">
+        <h4 class="read" data-aos="fade-up-left" data-aos-duration="1000">
           <a href="https://tegardwia.blogspot.com/" class="read">README</a>
         </h4>
       </div>
@@ -78,8 +78,8 @@
   <section class="ni" id="about">
     <div class="about">
       <article>
-        <h4 class="about-head">About Me</h4>
-        <div class="about-content">
+        <h4 class="about-head" data-aos="zoom-in-down" data-aos-duration="400">About Me</h4>
+        <div class="about-content" data-aos="fade-up" data-aos-duration="600">
           <p class="satu">
             Perkenalkan nama saya <span class="abt-fcs">Tegar Dwi Arbiantoro</span> biasa dipanggil <span class="abt-fcs">Tegar.</span>
           </p>
@@ -89,6 +89,25 @@
           <p class="dua">
             Saya terinspirasi oleh <span class="abt-fcs">teknologi</span> dan ingin terlibat di dalamnya, saya juga senang belajar dari <span class="abt-fcs">pengalaman dan kesalahan.</span>
           </p>
+        </div>
+      </article>
+      <article>
+        <div class="sosial-link" data-aos="zoom-in-up" data-aos-duration="1000">
+          <a href="https://github.com/L3Z2xTouya" class="button">
+            <div class="icon"><i class="fa-brands fa-square-github"></i></div>
+          </a>
+          <a href="https://www.instagram.com/tegardwi06/" class="button">
+            <div class="icon"><i class="fa-brands fa-square-instagram"></i></div>
+          </a>
+          <a href="https://twitter.com/Tegardwi06" class="button">
+            <div class="icon"><i class="fa-brands fa-square-twitter"></i></div>
+          </a>
+          <a href="https://www.linkedin.com/in/tegar-dwi-arbiantoro-ba783225a/" class="button">
+            <div class="icon"><i class="fa-brands fa-linkedin"></i></div>
+          </a>
+          <a href="https://www.facebook.com/tegar.arbiantoro.1" class="button">
+            <div class="icon"><i class="fa-brands fa-square-facebook"></i></div>
+          </a>
         </div>
       </article>
     </div>
@@ -102,17 +121,17 @@
   <section class="san" id="projects">
     <div class="projek">
       <article>
-        <h3 class="san-title">PROJECT</h3>
-        <div class="pro">
-          <div class="kartu">
-            <div class="img-kartu">
+        <h3 class="san-title" data-aos="fade-left" data-aos-duration="400">PROJECT</h3>
+        <div class="pro"data-aos="fade-left" data-aos-duration="600">
+          <div class="kartu"data-aos="fade-left" data-aos-duration="700">
+            <div class="img-kartu"data-aos="fade-left" data-aos-duration="900">
               <img src="../img/simonel.png" alt="" class="tmb">
             </div>
-              <h4 class="judul-kartu">Website IoT Sistem Monitoring Panel</h4>
-              <p class="text-kartu">Project Website IoT Sistem Monitoring Panel PLTS On Grid System dengan menggunakan PHP MySQL.</p>
-            </div>
-            <div class="kartu">
-            <!-- <div class="img-kartu">
+            <h4 class="judul-kartu">Website IoT Sistem Monitoring Panel</h4>
+            <p class="text-kartu">Project Website IoT Sistem Monitoring Panel PLTS On Grid System dengan menggunakan PHP MySQL.</p>
+          </div>
+          <!-- <div class="kartu">
+            <div class="img-kartu">
               <img src="../img/1316658.jpeg" alt="" class="tmb">
             </div>
             <h4 class="judul-kartu">Website IoT Sistem Monitoring Panel</h4>
@@ -133,9 +152,9 @@
     
     <div class="contact">
       <article>
-        <h3 class="contact-ttl">HUBUNGI SAYA</h3>
-        <p class="des-contact">Apabila ada kepentingan atau terdapat masalah, bisa langsung hubungi saya melalui formulir di bawah ini! </p>
-        <div class="box-contact">
+        <h3 class="contact-ttl" data-aos="fade-up" data-aos-duration="600">HUBUNGI SAYA</h3>
+        <p class="des-contact" data-aos="fade-up" data-aos-duration="800">Apabila ada kepentingan atau terdapat masalah, bisa langsung hubungi saya melalui formulir di bawah ini! </p>
+        <div class="box-contact" data-aos="fade-up" data-aos-duration="600">
           <label for="name" class="label">Name</label>
           <input type="text" class="int" id="name">
 
