--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -130,14 +130,13 @@
             <h4 class="judul-kartu">Website IoT Sistem Monitoring Panel</h4>
             <p class="text-kartu">Project Website IoT Sistem Monitoring Panel PLTS On Grid System dengan menggunakan PHP MySQL.</p>
           </div>
-          <!-- <div class="kartu">
+          <div class="kartu">
             <div class="img-kartu">
-              <img src="../img/1316658.jpeg" alt="" class="tmb">
+              <img src="../img/Pergabutan_gaje.png" alt="" class="tmb">
             </div>
-            <h4 class="judul-kartu">Website IoT Sistem Monitoring Panel</h4>
-            <p class="text-kartu">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia accusantium impedit magni perspiciatis beatae eveniet.</p>
-          </div> -->
-        </div>
+            <h4 class="judul-kartu">Desain Grafis Menggunakan Canva</h4>
+            <p class="text-kartu">Desain Grafis tema Hari Nasional. Desain tersebut saya buat menggunakan platform aplikasi Canva.</p>
+          </div>
       </article>
     </div>
     <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
