--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -122,16 +122,16 @@
     <div class="projek">
       <article>
         <h3 class="san-title" data-aos="fade-left" data-aos-duration="400">PROJECT</h3>
-        <div class="pro"data-aos="fade-left" data-aos-duration="600">
-          <div class="kartu"data-aos="fade-left" data-aos-duration="700">
-            <div class="img-kartu"data-aos="fade-left" data-aos-duration="900">
+        <div class="pro" data-aos="fade-left" data-aos-duration="600">
+          <div class="kartu" data-aos="fade-left" data-aos-duration="700">
+            <div class="img-kartu" data-aos="fade-left" data-aos-duration="900">
               <img src="../img/simonel.png" alt="" class="tmb">
             </div>
             <h4 class="judul-kartu">Website IoT Sistem Monitoring Panel</h4>
             <p class="text-kartu">Project Website IoT Sistem Monitoring Panel PLTS On Grid System dengan menggunakan PHP MySQL.</p>
           </div>
-          <div class="kartu">
-            <div class="img-kartu">
+          <div class="kartu" data-aos="fade-right" data-aos-duration="700">
+            <div class="img-kartu" data-aos="fade-right" data-aos-duration="900">
               <img src="../img/Pergabutan_gaje.png" alt="" class="tmb">
             </div>
             <h4 class="judul-kartu">Desain Grafis Menggunakan Canva</h4>
