--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -41,6 +41,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact Me</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html"><i class="fa-solid fa-right-from-bracket"></i></a>
+          </li>
         </ul>
       </div>
     </div>
