--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="#contact">Contact Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../index.html"><i class="fa-solid fa-right-from-bracket"></i></a>
+            <a class="nav-link" href="../index.html" onclick="return confirm('Yakin Logout?')"><i class="fa-solid fa-right-from-bracket"></i></a>
           </li>
         </ul>
       </div>
@@ -120,6 +120,62 @@
   </section>
   <!-- Akhir About -->
 
+  <!-- Skills -->
+  <section class="skills" id="skills">
+    <div class="skills-content">
+      <article>
+        <div class="skill-box">
+          <span class="title">HTML</span>
+          <div class="skill-bar">
+              <span class="skill-per html">
+                  <span class="tooltip">80%</span>
+              </span>
+          </div>
+        </div>
+        <div class="skill-box">
+            <span class="title">CSS</span>
+            <div class="skill-bar">
+                <span class="skill-per css">
+                    <span class="tooltip">60%</span>
+                </span>
+            </div>
+        </div>
+        <div class="skill-box">
+            <span class="title">JavaScript</span>
+            <div class="skill-bar">
+                <span class="skill-per javascript">
+                    <span class="tooltip">30%</span>
+                </span>
+            </div>
+        </div>
+        <div class="skill-box">
+            <span class="title">Debian Linux</span>
+            <div class="skill-bar">
+                <span class="skill-per debian">
+                    <span class="tooltip">70%</span>
+                </span>
+            </div>
+        </div>
+        <div class="skill-box">
+            <span class="title">Mikrotik MTCNA</span>
+            <div class="skill-bar">
+                <span class="skill-per mikrotik">
+                    <span class="tooltip">50%</span>
+                </span>
+            </div>
+        </div>
+        <div class="skill-box">
+            <span class="title">Desain Canva</span>
+            <div class="skill-bar">
+                <span class="skill-per desainposter">
+                    <span class="tooltip">45%</span>
+                </span>
+            </div>
+        </div>
+      </article>
+    </div>
+  </section>
+
   <!-- Project -->
   <section class="san" id="projects">
     <div class="projek">
@@ -137,7 +193,7 @@
             <div class="img-kartu" data-aos="fade-right" data-aos-duration="900">
               <img src="../img/Pergabutan_gaje.png" alt="" class="tmb">
             </div>
-            <h4 class="judul-kartu">Desain Grafis Menggunakan Canva</h4>
+            <h4 class="judul-kartu">Poster Hari Nasional Menggunakan Canva</h4>
             <p class="text-kartu">Desain Grafis tema Hari Nasional. Desain tersebut saya buat menggunakan platform aplikasi Canva.</p>
           </div>
       </article>
