--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -36,6 +36,9 @@
             <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#skills">Skill</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#projects">Project</a>
           </li>
           <li class="nav-item">
@@ -122,7 +125,8 @@
 
   <!-- Skills -->
   <section class="skills" id="skills">
-    <div class="skills-content">
+    <h3 class="skill-title" data-aos="fade-left" data-aos-duration="400">SKILLS</h3>
+    <div class="skills-content" data-aos="fade-up" data-aos-duration="700">
       <article>
         <div class="skill-box">
           <span class="title">HTML</span>
@@ -173,6 +177,24 @@
             </div>
         </div>
       </article>
+      <!-- <article class="right-box-skills">
+        <div class="box-skills" data-aos="fade-left" data-aos-duration="500">
+          <span class="special-icon">
+              <i class="fa-brands fa-html5" style="color: #39dada;"></i>
+              <i class="fa-brands fa-css3-alt" style="color: #39dada;"></i>                                <p class="special-content">
+              <span class="special-heading">HTML CSS</span>
+              <span class="special-text">HTML dan CSS, kombo kehebatan yang membentuk penampilan dan fungsionalitas situs web modern saat ini.</span>
+          </p>
+      </div>
+      <div class="box-skills" data-aos="fade-left" data-aos-duration="1100">
+        <span class="special-icon">
+            <i class="fa-brands fa-square-js" style="color: #f46208;"></i>                                </span>
+            <p class="special-content">
+              <span class="special-heading">JAVASCRIPT</span>
+              <span class="special-text">JavaScript, bahasa pemrograman yang kuat, digunakan untuk mengembangkan interaksi dinamis di situs web dan aplikasi.</span>
+          </p>
+      </div>
+      </article> -->
     </div>
   </section>
 
